Bug 72989 - Goal Seek or Solver and Background Color and Font Color not grayed out
Summary: Goal Seek or Solver and Background Color and Font Color not grayed out
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1.4.2 release
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks: GoalSeek
  Show dependency treegraph
 
Reported: 2013-12-23 16:25 UTC by grofaty
Modified: 2020-07-16 08:17 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description grofaty 2013-12-23 16:25:17 UTC
Using LibreOffice 4.1.4.2 on Windows XP.

GOAL SEEK
1. Tools | Goal Seek
And the problem appears. If looking into toolbar you will notice that all of the buttons except "Background Color" and "Font Color" are greyed out. If selecting some option from "Background Color" or "Font Color" and nothing happens. So it looks like this two buttons should also be grayed out, because they have zero effect when changing.

SOLVER
1. Tools | Solver
The same problem as above. "Background Color" and "Font Color" have zero effect when dialog is opened.

Expected behavior:
When Tools | Goal Seek or Tools | Solver is selected from menu, both "Background Color" and "Font Color" buttons from toolbar should have been disabled = grayed out.

P.S. This is probably easy hack, can someone mark it as it please.
Comment 1 Adolfo Jayme Barrientos 2013-12-26 11:24:23 UTC
Confirmed with 4.2 RC on Linux.
Comment 2 yjw9012 2013-12-31 05:15:27 UTC
I just assigned this EasyHack to myself.
This should be a good practice for a newbie like me.
I'll keep you updated.
Comment 3 yjw9012 2014-01-02 22:38:33 UTC
I am having hard time locating which files are in charge of Tools | Goal Seek and Tools | Solver dialogs. Any hints would be appreciated.
Comment 4 Daniel Dong 2014-01-15 13:22:09 UTC
Confirmed in the following version on Linux:
Version: 4.3.0.0.alpha0+
Build ID: 10eaaac020e32f0bbb3869cecee94df0955b6a3b
Comment 5 Markus Mohrhard 2014-01-16 01:54:53 UTC
Easy hacks should only being marked by experienced developer who can also mentor such a task. If you are not a developer please don't mark any bugs as easy hacks. Most tasks that might seem easy are actually quite difficult and out of the scope for beginners.

Marking your own bug as an easy hack just to make it more visible is just wrong. This does not help anyone and only drives new developers away from the project. (and experienced developers from looking into bugzilla)
Comment 6 Dima Kostenich 2014-01-22 07:55:30 UTC
Hey guys! There was no any status update from Daniel for almost a week and I decided to send a patch for review related to this bug, because I fixed it a week ago. Is it ok or should I abandon my review right now?
Comment 7 Caolán McNamara 2014-01-22 12:24:55 UTC
This one is a bit trickier that it looks actually and its a regression
Comment 8 Commit Notification 2014-01-22 12:26:10 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3b0cf674925dd8fd0f34c5a810afc470ce5b4a0f

Resolves: fdo#72989 color buttons not disabled in readonly docs



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.