fdo#72989: Disable buttons when Goal Seek or Solver selected

When Goal Seek or Solver is selected from Tools menu in sc,
both "Background Color" and "Font Color" buttons from toolbar
should have been disabled (grayed out).

Change-Id: I9d8588a7d8080742f597b83382451b9a5dd9f15e